--- a/src/output.css
+++ b/src/output.css
@@ -580,6 +580,14 @@ video {
   outline-style: solid;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -610,6 +618,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-5\/6 {
+  height: 83.333333%;
+}
+
+.h-\[11\/12\] {
+  height: 11/12;
 }
 
 .w-1\/2 {
@@ -777,6 +797,14 @@ video {
 
 .pr-1 {
   padding-right: 0.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-2xl {
