--- a/src/output.css
+++ b/src/output.css
@@ -467,6 +467,28 @@ video {
   --radius: 0.5rem;
 }
 
+.dark {
+  --background: 222.2 84% 4.9%;
+  --foreground: 210 40% 98%;
+  --card: 222.2 84% 4.9%;
+  --card-foreground: 210 40% 98%;
+  --popover: 222.2 84% 4.9%;
+  --popover-foreground: 210 40% 98%;
+  --primary: 210 40% 98%;
+  --primary-foreground: 222.2 47.4% 11.2%;
+  --secondary: 217.2 32.6% 17.5%;
+  --secondary-foreground: 210 40% 98%;
+  --muted: 217.2 32.6% 17.5%;
+  --muted-foreground: 215 20.2% 65.1%;
+  --accent: 217.2 32.6% 17.5%;
+  --accent-foreground: 210 40% 98%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 210 40% 98%;
+  --border: 217.2 32.6% 17.5%;
+  --input: 217.2 32.6% 17.5%;
+  --ring: 212.7 26.8% 83.9%;
+}
+
 * {
   border-color: hsl(var(--border));
 }
@@ -589,6 +611,7 @@ body {
   border-radius: 0.25rem;
   border-width: 1px;
   border-color: hsl(var(--input));
+  background-color: transparent;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -741,9 +764,8 @@ body {
   border-style: dashed;
 }
 
-.border-\[\#F5F4F4\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(245 244 244 / var(--tw-border-opacity));
+.border-muted-foreground {
+  border-color: hsl(var(--muted-foreground));
 }
 
 .border-red-500 {
@@ -751,12 +773,8 @@ body {
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.border-border {
-  border-color: hsl(var(--border));
-}
-
-.border-muted-foreground {
-  border-color: hsl(var(--muted-foreground));
+.bg-background {
+  background-color: hsl(var(--background));
 }
 
 .bg-white {
