metadata retrieved from api

--- a/src/output.css
+++ b/src/output.css
@@ -485,6 +485,12 @@ body {
   color: hsl(var(--foreground));
 }
 
+/* @media (prefers-color-scheme: dark) {
+        #app {
+            @apply dark;
+        }
+    } */
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -735,8 +741,16 @@ body {
   margin-right: 0.25rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-2 {
@@ -843,6 +857,10 @@ body {
   width: 100vw;
 }
 
+.w-6\/12 {
+  width: 50%;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -929,12 +947,12 @@ body {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: calc(var(--radius) - 2px);
-}
-
 .rounded-lg {
   border-radius: var(--radius);
+}
+
+.rounded-md {
+  border-radius: calc(var(--radius) - 2px);
 }
 
 .border {
@@ -977,6 +995,10 @@ body {
   background-color: hsl(var(--destructive));
 }
 
+.bg-muted {
+  background-color: hsl(var(--muted));
+}
+
 .bg-muted\/40 {
   background-color: hsl(var(--muted) / 0.4);
 }
@@ -987,11 +1009,6 @@ body {
 
 .bg-transparent {
   background-color: transparent;
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -1008,6 +1025,11 @@ body {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1037,10 +1059,6 @@ body {
 
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .pb-5 {
@@ -1075,6 +1093,11 @@ body {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-medium {
@@ -1205,6 +1228,10 @@ body {
 
 .hover\:text-foreground:hover {
   color: hsl(var(--foreground));
+}
+
+.hover\:text-muted-foreground\/80:hover {
+  color: hsl(var(--muted-foreground) / 0.8);
 }
 
 .hover\:underline:hover {
@@ -1467,11 +1494,27 @@ body {
   .lg\:w-4\/12 {
     width: 33.333333%;
   }
+
+  .lg\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .lg\:w-6\/12 {
+    width: 50%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
 }
 
 @media (min-width: 1280px) {
   .xl\:w-3\/12 {
     width: 25%;
+  }
+
+  .xl\:w-4\/12 {
+    width: 33.333333%;
   }
 }
 
