--- a/src/input.css
+++ b/src/input.css
@@ -3,101 +3,106 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 222.2 84% 4.9%;
 
-    --radius: 0.5rem;
-  }
+        --radius: 0.5rem;
+    }
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    .dark {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 47.4% 11.2%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
+    }
 
-  .ag-theme-quartz {
-    --ag-border-color: hsl(214.3, 31.8%, 91.4%);
-    --ag-foreground-color: hsl(222.2, 84%, 4.9%);
-    --ag-background-color: hsl(0, 0%, 100%);
-    --ag-header-foreground-color: hsl(222.2, 84%, 4.9%);
-    --ag-header-background-color: hsl(210, 40%, 96.1%);
-    --ag-row-hover-color: hsla(210, 40%, 96.1%, 0.5);
-  }
+    .ag-theme-quartz {
+        --ag-border-color: hsl(214.3, 31.8%, 91.4%);
+        --ag-foreground-color: hsl(222.2, 84%, 4.9%);
+        --ag-background-color: hsl(0, 0%, 100%);
+        --ag-header-foreground-color: hsl(222.2, 84%, 4.9%);
+        --ag-header-background-color: hsl(210, 40%, 96.1%);
+        --ag-row-hover-color: hsla(210, 40%, 96.1%, 0.5);
+    }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
+    /* @media (prefers-color-scheme: dark) {
+        #app {
+            @apply dark;
+        }
+    } */
 }
 
 @layer components {
-  .btn-std {
-    @apply py-2 rounded text-sm font-medium text-primary-foreground bg-primary hover:bg-primary/90;
-  }
+    .btn-std {
+        @apply py-2 rounded text-sm font-medium text-primary-foreground bg-primary hover:bg-primary/90;
+    }
 
-  .btn-alt {
-    @apply py-2 border rounded text-sm font-medium text-foreground bg-background hover:bg-accent hover:text-accent-foreground;
-  }
+    .btn-alt {
+        @apply py-2 border rounded text-sm font-medium text-foreground bg-background hover:bg-accent hover:text-accent-foreground;
+    }
 
-  .input-std {
-    @apply px-2 py-1 h-9 text-sm rounded border border-input focus:outline outline-1 outline-ring bg-transparent placeholder:text-muted-foreground;
-  }
+    .input-std {
+        @apply px-2 py-1 h-9 text-sm rounded border border-input focus:outline outline-1 outline-ring bg-transparent placeholder:text-muted-foreground;
+    }
 
-  .chip-input {
-    @apply px-2 overflow-hidden flex items-center bg-background border border-muted-foreground rounded-full hover:cursor-pointer hover:bg-muted;
-  }
+    .chip-input {
+        @apply px-2 overflow-hidden flex items-center bg-background border border-muted-foreground rounded-full hover:cursor-pointer hover:bg-muted;
+    }
 }
